@@ -50,15 +50,16 @@ import org.slf4j.LoggerFactory;
 
 import static cascading.flow.hadoop.util.HadoopMRUtil.readStateFromDistCache;
 import static cascading.flow.hadoop.util.HadoopUtil.deserializeBase64;
+import static cascading.util.LogUtil.logCounters;
+import static cascading.util.LogUtil.logMemory;
 
 /** Class FlowReducer is the Hadoop Reducer implementation. */
 public class FlowReducer extends MapReduceBase implements Reducer
   {
   private static final Logger LOG = LoggerFactory.getLogger( FlowReducer.class );
 
-  /** Field flowReducerStack */
+  private FlowNode flowNode;
   private HadoopReduceStreamGraph streamGraph;
-  /** Field currentProcess */
   private HadoopFlowProcess currentProcess;
   private TimedIterator timedIterator;
 
@@ -91,9 +92,11 @@ public class FlowReducer extends MapReduceBase implements Reducer
       if( reduceNodeState == null )
         reduceNodeState = readStateFromDistCache( jobConf, jobConf.get( FlowStep.CASCADING_FLOW_STEP_ID ), "reduce" );
 
-      FlowNode node = deserializeBase64( reduceNodeState, jobConf, BaseFlowNode.class );
+      flowNode = deserializeBase64( reduceNodeState, jobConf, BaseFlowNode.class );
 
-      streamGraph = new HadoopReduceStreamGraph( currentProcess, node, Util.getFirst( node.getSourceElements() ) );
+      LOG.info( "flow node id: {}, ordinal: {}", flowNode.getID(), flowNode.getOrdinal() );
+
+      streamGraph = new HadoopReduceStreamGraph( currentProcess, flowNode, Util.getFirst( flowNode.getSourceElements() ) );
 
       group = (HadoopGroupGate) streamGraph.getHeads().iterator().next();
 
@@ -103,8 +106,10 @@ public class FlowReducer extends MapReduceBase implements Reducer
       for( Duct tail : streamGraph.getTails() )
         LOG.info( "sinking to: " + ( (ElementDuct) tail ).getFlowElement() );
 
-      for( Tap trap : node.getTraps() )
+      for( Tap trap : flowNode.getTraps() )
         LOG.info( "trapping to: " + trap );
+
+      logMemory( LOG, "flow node id: " + flowNode.getID() + ", mem on start" );
       }
     catch( Throwable throwable )
       {
@@ -177,6 +182,10 @@ public class FlowReducer extends MapReduceBase implements Reducer
         currentProcess.increment( SliceCounters.Process_End_Time, processEndTime );
         currentProcess.increment( SliceCounters.Process_Duration, processEndTime - processBeginTime );
         }
+
+      String message = "flow node id: " + flowNode.getID();
+      logMemory( LOG, message + ", mem on close" );
+      logCounters( LOG, message + ", counter:", currentProcess );
       }
     }
 
